--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.9
-yarn_mappings=1.21.9+build.1
-loader_version=0.17.2
-loom_version=1.11-SNAPSHOT
+minecraft_version=1.21.11
+yarn_mappings=1.21.11+build.4
+loader_version=0.18.4
+loom_version=1.15-SNAPSHOT
 
 # Fabric API
-fabric_version=0.134.0+1.21.9
+fabric_api_version=0.141.2+1.21.11
 
 # Mod Properties
 mod_version=1.0.5
